# gmh

./: .gitignore  LICENSE
folder_management/: Cargo.toml
folder_management/src/: lib.rs
folder_management/src/manipulate_folders/: concatenate_folder_txt.rs  create_folder.rs  delete_folder.rs  mod.rs
folder_management/src/manipulate_txt/: deletetxt.rs  gettxt.rs  mod.rs  savetxt.rs
gmh/: Cargo.toml
gmh_main/: Cargo.toml
gmh_main/src/: app_setup.rs  lib.rs  main.rs
gmh_main/src/ui/: app_setup.rs  main_app.rs  mod.rs
live_audio_transcription/: Cargo.toml
live_audio_transcription/src/: lib.rs  record_transcribe.rs  whisper.rs  whisper_installer.rs
setup/: Cargo.toml
setup/src/: lib.rs
setup/src/config/: init.rs  mod.rs  whisper_install.rs
ui_components/: Cargo.toml
ui_components/src/: lib.rs
ui_components/src/navigation/: components.rs  menu.rs  mod.rs  visuals.rs
