[package]
name = "gmh_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
folder_management = {path = '../folder_management'}
live_audio_transcription = {path = '../live_audio_transcription'}
setup = {path = '../setup'}
ui_components = {path = '../ui_components'}

anyhow = "1.0.80"
eframe = "0.26.2"
simple-logging = "2.0.2"
log = "0.4.21"
