[package]
name = "live_audio_transcription"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
reqwest = {version ="0.11.24", features = ["blocking"]}
wavy = "0.9.1"
whisper-rs-2 = "0.2.1"
